Changelog
=========

0.13.12 (unreleased)
--------------------

- Nothing changed yet.


0.13.11 (2022-12-13)
--------------------

- Better exception handling when looking for config.
  [bignose-debian]


0.13.10 (2022-12-13)
--------------------

- Better toml support (use tomlib for 3.11, tomli for 3.6 to 3.10).
  [salty-horse, mgorny]

- Minimal PEP 517 support.
  [cpcloud]

- 3.11 support for run as module and run as script.
  [nphilipp, gotcha]

- Based on OSV:PYSEC-2022-12 change ipython dependencies,
  for users using python 3.6, install 7.16.3 <= IPython < 7.17.0,
  for users using python>3.6, install IPython >= 7.31.1.
  [malkstar]


0.13.9 (2021-06-02)
-------------------

- Fix again when `pyproject.toml` does not contain `tool` section.
  [markab108]


0.13.8 (2021-05-26)
-------------------

- Fix when `pyproject.toml` does not contain `tool` section.
  [anjos]

- Add the convenience function ``iex()``.
  [alanbernstein]


0.13.7 (2021-03-16)
-------------------

- Do not instantiate IPython on import
  [adamchainz]


0.13.6 (2021-03-08)
-------------------

- Fix broken parsing of pyproject.toml
  [alexandrebarbaruiva]


0.13.5 (2021-03-02)
-------------------

- Add support for pyproject.toml as configuration file
  [alexandrebarbaruiva]

- For users using python 3.4, install 6.0.0 <= IPython < 7.0.0,
  for users using python 3.5, install 7.0.0 <= IPython < 7.10.0,
  for users using python 3.6, install 7.10.0 <= IPython < 7.17.0,
  for users using python>3.6, install IPython >= 7.17.0.
  [d1618033]


0.13.4 (2020-10-01)
-------------------

- Add '-m' option
  [mrmino]


0.13.3 (2020-06-23)
-------------------

- Allow runcall, runeval to also use set context value
  [meowser]

- Add condition argument to set_trace
  [alexandrebarbaruiva]


0.13.2 (2020-03-03)
-------------------

- Remove leftover debug code
  [gotcha]


0.13.1 (2020-02-28)
-------------------

- Fix when no configuration file
  [gotcha]


0.13.0 (2020-02-28)
-------------------
