@@ -4,7 +4,8 @@ Changelog
 0.13.12 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- Modify tests to test 3.11 separately from earlier python versions.
+  [andrewzwicky]
 
 
 0.13.11 (2022-12-13)
